--- a/React-Redux-Django Dashboard/package.json
+++ b/React-Redux-Django Dashboard/package.json
@@ -29,12 +29,16 @@
     "es6-promise": "^3.1.2",
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.5.1",
+    "normalizr": "^3.2.3",
     "radium": "^0.16.6",
     "react-bootstrap": "^0.31.3",
+    "react-bootstrap-table": "^4.0.3",
     "react-cookie": "^0.4.5",
     "react-dom": "^0.14.7",
     "react-redux": "^4.4.0",
+    "react-router-bootstrap": "^0.24.4",
     "redux": "^3.3.1",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^1.0.3"
   }
 }
