--- a/React-Redux-Django Dashboard/package.json
+++ b/React-Redux-Django Dashboard/package.json
@@ -39,6 +39,8 @@
     "react-router-bootstrap": "^0.24.4",
     "redux": "^3.3.1",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^1.0.3"
+    "redux-thunk": "^1.0.3",
+    "webpack-css-loaders": "^1.0.0"
   }
 }
+
