--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
+    "bootstrap": "^3.3.7",
     "components": "^0.1.0",
+    "compression-webpack-plugin": "^1.0.1",
     "css-loader": "^0.28.7",
     "eslint": "^2.3.0",
     "fixed-data-table": "^0.6.4",
     "get-size": "^2.0.2",
+    "ip": "^1.1.5",
+    "jquery": "^3.2.1",
     "react": "^0.14.7",
     "react-hot-loader": "^1.3.0",
     "react-router": "^4.2.0",
@@ -35,8 +39,10 @@
     "react-bootstrap-table": "^4.0.3",
     "react-cookie": "^0.4.5",
     "react-dom": "^0.14.7",
+    "react-loading": "^0.1.4",
     "react-redux": "^4.4.0",
     "react-router-bootstrap": "^0.24.4",
+    "react-spinkit": "^3.0.0",
     "redux": "^3.3.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^1.0.3",
